# extended_fizzbuzz

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: basic.rs
src/: lib.rs  matcher.rs
