[package]
authors = ["Adrian Wannenmacher <tfld@tfld.dev>"]
description = "Configurable FizzBuzz library"
documentation = "https://docs.rs/extended_fizzbuzz"
edition = "2018"
homepage = "https://github.com/TeFiLeDo/extended_fizzbuzz"
keywords = ["fizzbuzz", "fizz", "buzz", "fizz-buzz"]
license = "MIT"
name = "extended_fizzbuzz"
readme = "README.md"
repository = "https://github.com/TeFiLeDo/extended_fizzbuzz"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

[dev-dependencies]
rand = "0.7"
